feat: Finish impl and add tests