@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -23,7 +24,7 @@ public class MongoDbProductRepository implements ProductRepository {
     @Override
     public List<Product> findAll() {
         List<ProductEntity> all = mongoDbProductRepository.findAll();
-        return all.stream().map(this::mapProductEntityToProduct).toList();
+        return all.stream().map(this::mapProductEntityToProduct).collect(Collectors.toList());
     }
 
     private Product mapProductEntityToProduct(ProductEntity productEntity) {
@@ -33,6 +34,7 @@ public class MongoDbProductRepository implements ProductRepository {
                 .name(productEntity.getName())
                 .image(mapProductImageEntityToProductImage(productEntity.getImage()))
                 .category(categoryRepository.findById(productEntity.getCategoryId()).orElse(null))
+                .stock(productEntity.getStock())
                 .build();
     }
 
@@ -49,6 +51,32 @@ public class MongoDbProductRepository implements ProductRepository {
     public Optional<Product> findById(UUID id) {
         Optional<ProductEntity> byId = mongoDbProductRepository.findById(id);
         return byId.map(this::mapProductEntityToProduct);
+    }
+
+    @Override
+    public Product update(Product product) {
+        ProductEntity save = mongoDbProductRepository.save(mapProductToProductEntity(product));
+        return mapProductEntityToProduct(save);
+    }
+
+    private ProductEntity mapProductToProductEntity(Product product) {
+        ProductEntity productEntity = new ProductEntity();
+        productEntity.setId(product.getId());
+        productEntity.setName(product.getName());
+        productEntity.setPrice(product.getPrice());
+        productEntity.setCategoryId(product.getCategory().getId());
+        productEntity.setImage(mapProductImageToProductImageEntity(product.getImage()));
+        productEntity.setStock(product.getStock());
+        return productEntity;
+    }
+
+    private ProductEntity.ProductImageEntity mapProductImageToProductImageEntity(ProductImage image) {
+        if (image == null) {
+            return null;
+        }
+        ProductEntity.ProductImageEntity productImageEntity = new ProductEntity.ProductImageEntity();
+        productImageEntity.setUrl(image.getUrl());
+        return productImageEntity;
     }
 
 }
